--- a/index.htm
+++ b/index.htm
@@ -148,7 +148,7 @@
               
               <div class="progress">
                 <span class="skill">Html <i class="val">100%</i></span>
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar" style="width: 100" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
 
               <div class="progress">
@@ -158,12 +158,12 @@
 
               <div class="progress">
                 <span class="skill">Bootstrap<i class="val">95</i></span>
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" style="width: 95" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
 
               <div class="progress">
                 <span class="skill">Javascript <i class="val">80</i></span>
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
           </div>
         </div>
