--- a/index.htm
+++ b/index.htm
@@ -305,7 +305,7 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/Capture.PNG" class="img-fluid" alt=""></div>
+            <div class="portfolio-img"><img src="../assets/img/portfolio/Capture.PNG" class="img-fluid" alt=""></div>
             <div class="portfolio-info">
               <a href="https://taha1103.github.io/TFstores/">Visit!</a>  <h4>Shoes Ecommerce Site</h4>
             </div>
