--- a/index.htm
+++ b/index.htm
@@ -317,7 +317,14 @@
               <a href="https://taha1103.github.io/QuizGame/">Visit!</a> <h4>J.S Quiz Game</h4>
             </div>
           </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/capture.png"class="img-fluid" alt="Shoes site img"></div>
 
+            <div class="portfolio-info">
+              <a href="https://taha1103.github.io/TFstores/">Visit!</a> <h4>Shoes Ecommerce Site</h4>
+            </div>
+          </div>
       <!-- ************SPACE FOR MORE PROJECTS*************** -->
 
         </div>
