--- a/index.htm
+++ b/index.htm
@@ -325,6 +325,14 @@
               <a href="https://taha1103.github.io/TFstores/">Visit!</a> <h4>Shoes Ecommerce Site</h4>
             </div>
           </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/syed.png"class="img-fluid" alt="Syed enterprises img"></div>
+
+            <div class="portfolio-info">
+              <a href="https://syedenterprises.github.io/SE/">Visit!</a> <h4>Syed Enterprises</h4>
+            </div>
+          </div>
       <!-- ************SPACE FOR MORE PROJECTS*************** -->
 
         </div>
