--- a/index.htm
+++ b/index.htm
@@ -58,7 +58,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Taha Farooqui</h1>
-      <h2>I'm a Professional Front-end Web Designer In Karachi Pakistan</h2>
+      <h2>I'm a Professional Web Developer In Karachi Pakistan</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section>
@@ -158,6 +158,12 @@
                 <span class="skill">Javascript <i class="val">80</i></span>
                 <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
+               
+               <div class="progress">
+                <span class="skill">PHP<i class="val">90</i></span>
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 90" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+               
           </div>
         </div>
 
