--- a/index.htm
+++ b/index.htm
@@ -161,7 +161,7 @@
                
                <div class="progress">
                 <span class="skill">PHP<i class="val">90</i></span>
-                <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 90" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar" style="width: 90" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
                
           </div>
