--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
   <header id="header" class="fixed-top  d-flex justify-content-center align-items-center header-transparent">
     <nav class="nav-menu d-none d-lg-block">
       <ul>
-        <li class="active"><a href="index.aspx.html">Home</a></li>
+        <li class="active"><a href="about">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#resume">Resume</a></li>
         <li><a href="#services">Services</a></li>
