--- a/index.htm
+++ b/index.htm
@@ -332,6 +332,14 @@
               <a href="https://syedenterprises.github.io/SE/">Visit!</a> <h4>Syed Enterprises</h4>
             </div>
           </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-img"><img src="assets/img/portfolio/weather.png"class="img-fluid" alt="Syed enterprises img"></div>
+
+            <div class="portfolio-info">
+              <a href="https://taha1103.github.io/Myweather/">Visit!</a> <h4>Weather App</h4>
+            </div>
+          </div>
       <!-- ************SPACE FOR MORE PROJECTS*************** -->
 
         </div>
