--- a/index.htm
+++ b/index.htm
@@ -334,7 +334,7 @@
           </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-img"><img src="assets/img/portfolio/weather.png"class="img-fluid" alt="Syed enterprises img"></div>
+            <div class="portfolio-img"><img src="assets/img/portfolio/weather.png"class="img-fluid" alt="Weather app"></div>
 
             <div class="portfolio-info">
               <a href="https://taha1103.github.io/Myweather/">Visit!</a> <h4>Weather App</h4>
